--- a/app/package.json
+++ b/app/package.json
@@ -2,9 +2,9 @@
   "name": "app",
   "version": "1.0.0",
   "scripts": {
-    "dev": "solid-start dev",
+    "dev": "solid-start dev --port 3400",
     "build": "solid-start build",
-    "start": "solid-start start"
+    "start": "solid-start start --port 3400"
   },
   "type": "module",
   "devDependencies": {
@@ -18,6 +18,9 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.5.0",
+    "@trpc/client": "^10.0.0-rc.2",
+    "@trpc/server": "^10.0.0-rc.2",
+    "server": "^1.0.37",
     "solid-js": "^1.6.0",
     "solid-start": "^0.2.0",
     "undici": "^5.11.0"
