--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,22 @@
   "version": "1.0.0",
   "license": "MIT",
   "type": "module",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "tsx --watch src/run.ts"
+    "dev": "tsx --watch src/run.ts",
+    "start": "tsx src/run.ts"
   },
   "dependencies": {
+    "@trpc/server": "^10.0.0-proxy-beta.26",
     "dotenv": "^16.0.3",
+    "fastify": "^4.9.2",
     "puppeteer": "^19.2.0",
     "puppeteer-extra": "^3.3.4",
-    "puppeteer-extra-plugin-stealth": "^2.11.1"
+    "puppeteer-extra-plugin-stealth": "^2.11.1",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
-    "typescript": "^4.8.4",
-    "tsx": "^3.11.0"
+    "tsx": "^3.11.0",
+    "typescript": "^4.8.4"
   }
 }
