--- a/app/package.json
+++ b/app/package.json
@@ -8,11 +8,13 @@
   },
   "type": "module",
   "devDependencies": {
+    "@iconify-json/radix-icons": "^1.1.5",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "solid-start-node": "^0.2.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4",
+    "unplugin-icons": "^0.14.13",
     "vite": "^3.1.8"
   },
   "dependencies": {
