--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "happy-bird-app",
   "version": "1.0.0",
   "scripts": {
     "dev": "solid-start dev --port 3400",
@@ -22,12 +22,14 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.5.0",
-    "@trpc/client": "^10.0.0-rc.2",
-    "@trpc/server": "^10.0.0-rc.2",
-    "server": "^1.0.37",
+    "@trpc/client": "^10.0.0-rc.4",
+    "@trpc/server": "^10.0.0-rc.4",
+    "dotenv": "^16.0.3",
+    "happy-bird-server": "1.0.0",
     "solid-js": "^1.6.0",
     "solid-start": "^0.2.0",
-    "undici": "^5.11.0"
+    "undici": "^5.11.0",
+    "zod": "^3.19.1"
   },
   "engines": {
     "node": ">=16"
