--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "happy-bird-server",
+  "name": "hello-bird-server",
   "version": "1.0.0",
   "license": "MIT",
   "main": "src/index.ts",
