--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only server
+      - run: flyctl deploy --remote-only --config server/fly.toml --dockerfile server/Dockerfile
