Revert "Optimize Dockerfile for Turborepo"
This reverts commit c4f251efbd51528af07131c6703dfee4c793fcbd.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,35 +1,6 @@
-### BUILDER
 FROM node:19.0.0-bullseye-slim AS builder
 
-WORKDIR /app
-RUN yarn global add turbo
-COPY . .
-RUN turbo prune --scope=hello-bird-server --docker
-
-### INSTALLER
-FROM node:19.0.0-bullseye-slim AS installer
-WORKDIR /app
-
 # We don't need the standalone Chromium
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
-
-# First install the dependencies (as they change less often)
-COPY .gitignore .gitignore
-COPY --from=builder /app/out/json/ .
-COPY --from=builder /app/out/yarn.lock ./yarn.lock
-RUN yarn install
-
-# Build the project
-COPY --from=builder /app/out/full/ .
-COPY turbo.json turbo.json
-ENV NODE_ENV production
-RUN yarn turbo run build --filter=hello-bird-server...
-
-
-### RUNNER
-FROM node:19.0.0-bullseye-slim AS runner
-WORKDIR /app
-
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
 
 # Install Google Chrome Stable and fonts
@@ -41,12 +12,15 @@ RUN apt-get update && apt-get install gnupg wget -y && \
   apt-get install google-chrome-stable -y --no-install-recommends && \
   rm -rf /var/lib/apt/lists/*
 
-COPY --from=installer /app/package.json package.json
-COPY --from=installer /app/node_modules node_modules
-COPY --from=installer /app/server/node_modules server/node_modules
-COPY --from=installer /app/server/package.json server/package.json
-COPY --from=installer /app/server/dist server/dist
+RUN mkdir /app
+WORKDIR /app
+ENV NODE_ENV production
+
+COPY . .
+RUN yarn --prod
+RUN yarn build
+
 LABEL fly_launch_runtime="nodejs"
 
 ENV PUPPETEER_EXECUTABLE_PATH /usr/bin/google-chrome
-CMD ["yarn", "server", "start"]
+CMD ["yarn", "start"]
