--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "hello-bird-server": "1.0.0",
     "solid-js": "^1.6.0",
     "solid-start": "^0.2.0",
+    "solid-start-vercel": "^0.2.5",
     "undici": "^5.11.0",
     "zod": "^3.19.1"
   },
