--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hello-bird-app",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "solid-start dev --port 3400",
     "build": "solid-start build",
