--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "main": "src/index.ts",
+  "private": true,
   "scripts": {
     "dev": "NODE_ENV=development tsx watch src/run.ts",
     "auth": "NODE_ENV=production tsx src/bot/auth.ts",
