--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "solid-start dev --port 3400",
+    "dev": "dotenv solid-start dev -- --port 3400",
     "build": "solid-start build",
     "start": "solid-start start --port 3400"
   },
@@ -13,6 +13,7 @@
     "@iconify-json/ci": "^1.1.4",
     "@iconify-json/radix-icons": "^1.1.5",
     "autoprefixer": "^10.4.12",
+    "dotenv-cli": "^6.0.0",
     "postcss": "^8.4.18",
     "solid-start-node": "^0.2.0",
     "tailwindcss": "^3.2.0",
