--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "vite": "^3.1.8"
   },
   "dependencies": {
+    "@motionone/solid": "^10.14.3",
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.5.0",
     "@trpc/client": "^10.0.0-rc.6",
