--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "puppeteer": "^19.2.2",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-stealth": "^2.11.1",
+    "redis": "^4.5.0",
     "typescript": "^4.8.4",
     "zod": "^3.19.1"
   },
