--- a/lib/package.json
+++ b/lib/package.json
@@ -2,12 +2,18 @@
   "name": "hello-bird-lib",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "src/lib.ts",
+  "main": "dist/lib.js",
+  "types": "src/lib.ts",
   "private": true,
+  "scripts": {
+    "build": "etsc"
+  },
   "dependencies": {
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "esbuild": "^0.15.15",
+    "esbuild-node-tsc": "^2.0.4",
     "typescript": "^4.9.3"
   }
 }
