--- a/lib/package.json
+++ b/lib/package.json
@@ -2,8 +2,8 @@
   "name": "hello-bird-lib",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "dist/lib.js",
-  "types": "dist/lib.js",
+  "main": "src/lib.ts",
+  "types": "src/lib.ts",
   "private": true,
   "scripts": {
     "build": "etsc"
