Use proper exports solution for build problem

--- a/lib/package.json
+++ b/lib/package.json
@@ -2,9 +2,13 @@
   "name": "hello-bird-lib",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "src/lib.ts",
-  "types": "src/lib.ts",
   "private": true,
+  "exports": {
+    ".": {
+      "require": "./dist/lib.js",
+      "import": "./src/lib.ts"
+    }
+  },
   "scripts": {
     "build": "etsc"
   },
