--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx src/run.ts",
     "auth": "NODE_ENV=production tsx src/bot/auth.ts",
-    "pre-build": "if [ -z ${NO_DIST_REPLACE+x} ]; then sed -i 's|src/lib.ts|dist/lib.js|' ../lib/package.json; fi",
-    "build": "yarn pre-build && etsc",
+    "build": "etsc",
     "start": "NODE_ENV=production node dist/run.js"
   },
   "dependencies": {
