--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "scripts": {
     "app": "yarn workspace hello-bird-app",
     "server": "yarn workspace hello-bird-server",
-    "lib": "yarn workspace hello-bird-lib"
+    "lib": "yarn workspace hello-bird-lib",
+    "format": "prettier --cache --write ."
   },
   "devDependencies": {
     "prettier": "^2.7.1",
-    "rome": "^10.0.1",
     "turbo": "^1.6.3"
   }
 }
