--- a/lib/package.json
+++ b/lib/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "private": true,
+  "main": "src/lib.ts",
   "exports": {
     ".": {
       "require": "./dist/lib.js",
