--- a/app/package.json
+++ b/app/package.json
@@ -30,8 +30,8 @@
     "@solidjs/router": "^0.5.0",
     "@trpc/client": "^10.0.0-rc.6",
     "@trpc/server": "^10.0.0-rc.6",
-    "hello-bird-lib": "1.0.0",
-    "hello-bird-server": "1.0.0",
+    "hello-bird-lib": "workspace:^",
+    "hello-bird-server": "workspace:^",
     "nanoid": "^4.0.0",
     "solid-js": "^1.6.0",
     "solid-start": "^0.2.0",
