--- a/app/package.json
+++ b/app/package.json
@@ -9,34 +9,34 @@
   },
   "type": "module",
   "devDependencies": {
-    "@iconify-json/bi": "^1.1.10",
-    "@iconify-json/ci": "^1.1.4",
-    "@iconify-json/radix-icons": "^1.1.5",
-    "autoprefixer": "^10.4.12",
+    "@iconify-json/bi": "^1.1.12",
+    "@iconify-json/ci": "^1.1.5",
+    "@iconify-json/radix-icons": "^1.1.6",
+    "autoprefixer": "^10.4.13",
     "dotenv-cli": "^6.0.0",
-    "postcss": "^8.4.18",
-    "solid-start-node": "^0.2.0",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.8.4",
-    "unplugin-icons": "^0.14.13",
-    "vite": "^3.1.8"
+    "postcss": "^8.4.19",
+    "solid-start-node": "^0.2.6",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
+    "unplugin-icons": "^0.14.14",
+    "vite": "^3.2.4"
   },
   "dependencies": {
     "@motionone/solid": "^10.14.3",
     "@solid-primitives/connectivity": "^0.3.4",
     "@solid-primitives/page-visibility": "^2.0.2",
     "@solid-primitives/storage": "^1.3.3",
-    "@solidjs/meta": "^0.28.0",
-    "@solidjs/router": "^0.5.0",
-    "@trpc/client": "^10.0.0-rc.6",
-    "@trpc/server": "^10.0.0-rc.6",
+    "@solidjs/meta": "^0.28.2",
+    "@solidjs/router": "^0.5.1",
+    "@trpc/client": "^10.4.1",
+    "@trpc/server": "^10.4.1",
     "hello-bird-lib": "workspace:^",
     "hello-bird-server": "workspace:^",
     "nanoid": "^4.0.0",
-    "solid-js": "^1.6.0",
-    "solid-start": "^0.2.0",
-    "solid-start-vercel": "^0.2.5",
-    "undici": "^5.11.0",
+    "solid-js": "^1.6.2",
+    "solid-start": "^0.2.6",
+    "solid-start-vercel": "^0.2.6",
+    "undici": "^5.13.0",
     "zod": "^3.19.1"
   }
 }
