--- a/server/package.json
+++ b/server/package.json
@@ -12,22 +12,22 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
-    "@trpc/server": "^10.0.0-rc.6",
+    "@trpc/server": "^10.4.1",
     "dotenv": "^16.0.3",
-    "fastify": "^4.9.2",
+    "fastify": "^4.10.2",
     "fastify-sse-v2": "^3.0.0",
     "hello-bird-lib": "workspace:^",
     "nanoid": "^4.0.0",
-    "puppeteer": "^19.2.2",
+    "puppeteer": "^19.3.0",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-stealth": "^2.11.1",
-    "redis": "^4.5.0",
+    "redis": "^4.5.1",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "esbuild": "^0.15.15",
+    "esbuild": "^0.15.16",
     "esbuild-node-tsc": "^2.0.4",
-    "tsx": "^3.11.0",
+    "tsx": "^3.12.1",
     "typescript": "^4.9.3"
   }
 }
