--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "prettier": "^2.8.0",
     "turbo": "^1.6.3",
     "typescript": "^4.9.3"
+  },
+  "resolutions": {
+    "solid-start@^0.2.6": "patch:solid-start@npm%3A0.2.6#./.yarn/patches/solid-start-npm-0.2.6-671b274161.patch"
   }
 }
