--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -1,13 +1,7 @@
 {
+  "extends": "../tsconfig.base.json",
+  "include": ["./src"],
   "compilerOptions": {
-    "noEmit": true,
-    "module": "NodeNext",
-    // "moduleResolution": "node",
-    // "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
-    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
-
-    // Strictness
-    "strict": true /* Enable all strict type-checking options. */
+    "outDir": "dist"
   }
 }
