--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "app": "yarn workspace hello-bird-app",
     "server": "yarn workspace hello-bird-server",
     "lib": "yarn workspace hello-bird-lib",
-    "format": "prettier --cache --write ."
+    "format": "prettier --cache --write .",
+    "tc": "yarn tsc -b"
   },
   "devDependencies": {
     "prettier": "^2.8.0",
-    "turbo": "^1.6.3"
+    "turbo": "^1.6.3",
+    "typescript": "^4.9.3"
   }
 }
