--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "esbuild": "^0.15.16",
     "esbuild-node-tsc": "^2.0.4",
     "tsx": "^3.12.1",
