Move packages to ./packages folder

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "packageManager": "yarn@3.3.0",
   "workspaces": {
     "packages": [
-      "server",
-      "app",
-      "lib"
+      "packages/*"
     ]
   },
   "scripts": {
