--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "server": "yarn workspace hello-bird-server",
     "lib": "yarn workspace hello-bird-lib",
     "format": "prettier --cache --write .",
+    "lint": "yarn eslint -f unix .",
     "tc": "yarn tsc -b"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.28.0",
     "prettier": "^2.8.0",
     "turbo": "^1.6.3",
     "typescript": "^4.9.3"
