--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lib": "yarn workspace hello-bird-lib",
     "format": "prettier --cache --write .",
     "lint": "yarn eslint -f unix .",
-    "tc": "yarn tsc -b"
+    "tc": "yarn tsc -b",
+    "check": "yarn tc && yarn lint",
+    "clean": "git clean -xfd packages -e packages/app/.env -e packages/server/.env && yarn"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.45.0",
