Setup vitest vscode extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "editor.codeActionsOnSave": {
     "source.organizeImports": true
-  }
+  },
+  "vitest.commandLine": "yarn lib test",
+  "vitest.showFailMessages": true
 }
