--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,10 +5,10 @@
   "main": "src/index.ts",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development tsx src/run.ts",
-    "auth": "NODE_ENV=production tsx src/bot/auth.ts",
+    "dev": "NODE_ENV=development tsx src/app.ts",
+    "auth": "NODE_ENV=production tsx scripts/auth.ts",
     "build": "etsc",
-    "start": "NODE_ENV=production node dist/run.js"
+    "start": "NODE_ENV=production node dist/app.js"
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
