--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["./src"],
+  "include": ["./src", "scripts/auth.ts"],
   "compilerOptions": {
     "outDir": "dist",
 
