--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -15,7 +15,8 @@
     "test": "vitest"
   },
   "dependencies": {
-    "vitest": "^0.26.3",
+    "nanoid": "^4.0.0",
+    "vitest": "^0.27.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
