--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -15,12 +15,12 @@
     "test": "vitest"
   },
   "dependencies": {
-    "vitest": "^0.27.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "esbuild": "^0.16.15",
+    "esbuild": "^0.17.6",
     "esbuild-node-tsc": "^2.0.5",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5",
+    "vitest": "^0.28.4"
   }
 }
