--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,8 @@
       "dependsOn": ["build"]
     },
     "dev": {
-      "cache": false
+      "cache": false,
+      "dependsOn": ["^build"]
     },
     "test": {}
   }
