--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-bird-app",
+  "name": "shopping-bird-app",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -28,7 +28,7 @@
     "@solid-primitives/storage": "^1.3.4",
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.7.0",
-    "hello-bird-lib": "workspace:^",
+    "shopping-bird-lib": "workspace:^",
     "solid-js": "^1.6.10",
     "solid-start": "^0.2.20",
     "solid-start-vercel": "^0.2.20",
