--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "dotenv solid-start dev -- --port 3400",
-		"build": "mkdir -p node_modules && solid-start build",
+		"build": "solid-start build",
 		"start": "solid-start start --port 3400"
 	},
 	"type": "module",
