--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"extends": "../../tsconfig.base.json",
-	"include": ["./src"],
+	"include": ["./src", "./public/service-worker.js"],
 	"compilerOptions": {
 		"outDir": "./node_modules/.cache/tsc",
 
