--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,7 +18,8 @@
 		"tailwindcss": "^3.2.4",
 		"typescript": "^4.9.5",
 		"unplugin-icons": "^0.15.2",
-		"vite": "^4.1.1"
+		"vite": "^4.1.1",
+		"vite-plugin-pwa": "^0.14.4"
 	},
 	"dependencies": {
 		"@motionone/solid": "^10.15.5",
