--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -31,6 +31,7 @@
 		"shopping-bird-lib": "workspace:^",
 		"solid-js": "^1.6.10",
 		"solid-start": "^0.2.20",
+		"solid-start-node": "^0.2.20",
 		"solid-start-vercel": "^0.2.20",
 		"undici": "^5.18.0",
 		"zod": "^3.20.2"
