--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,6 +15,7 @@
 		"autoprefixer": "^10.4.13",
 		"dotenv-cli": "^7.0.0",
 		"postcss": "^8.4.21",
+		"solid-devtools": "^0.25.0",
 		"tailwindcss": "^3.2.4",
 		"typescript": "^4.9.5",
 		"unplugin-icons": "^0.15.2",
