--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,6 +23,8 @@
 		"vite-plugin-pwa": "^0.14.4"
 	},
 	"dependencies": {
+		"@auth/core": "^0.4.0",
+		"@auth/solid-start": "^0.1.0",
 		"@motionone/solid": "^10.15.5",
 		"@solid-primitives/connectivity": "^0.3.6",
 		"@solid-primitives/page-visibility": "^2.0.3",
