Add LOCAL_DEV env var to turbo cache busters

--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,8 @@
 	"pipeline": {
 		"build": {
 			"outputs": ["dist/**", ".output"],
-			"dependsOn": ["^build"]
+			"dependsOn": ["^build"],
+			"env": ["LOCAL_DEV"]
 		},
 		"start": {
 			"cache": false,
