--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
 	"$schema": "https://turbo.build/schema.json",
 	"pipeline": {
 		"build": {
-			"outputs": ["dist/**", ".output"],
+			"outputs": ["dist/**", ".solid/**", ".output/**", ".vercel/output/**"],
 			"dependsOn": ["^build"],
 			"env": ["LOCAL_DEV"]
 		},
