--- a/turbo.json
+++ b/turbo.json
@@ -2,6 +2,10 @@
 	"$schema": "https://turbo.build/schema.json",
 	"pipeline": {
 		"build": {
+			"outputs": ["dist/**"],
+			"dependsOn": ["^build"]
+		},
+		"hello-bird-app#build": {
 			"outputs": ["dist/**", ".solid/**", ".output/**", ".vercel/output/**"],
 			"dependsOn": ["^build"],
 			"env": ["LOCAL_DEV"]
