--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "shopping-bird-server",
+	"name": "server",
 	"version": "1.0.0",
 	"license": "MIT",
 	"main": "src/index.ts",
@@ -17,11 +17,11 @@
 		"dotenv": "^16.0.3",
 		"fastify": "^4.13.0",
 		"fastify-sse-v2": "^3.0.0",
+		"lib": "workspace:^",
 		"puppeteer": "^19.7.1",
 		"puppeteer-extra": "^3.3.4",
 		"puppeteer-extra-plugin-stealth": "^2.11.1",
 		"redis": "^4.6.4",
-		"shopping-bird-lib": "workspace:^",
 		"zod": "^3.20.6"
 	},
 	"devDependencies": {
