--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
 		"typescript": "^4.9.5"
 	},
 	"resolutions": {
-		"solid-start@^0.2.20": "patch:solid-start@npm%3A0.2.20#./.yarn/patches/solid-start-npm-0.2.20-1c62718646.patch",
-		"@panva/hkdf@^1.0.2": "patch:@panva/hkdf@npm%3A1.0.2#./.yarn/patches/@panva-hkdf-npm-1.0.2-ea4c380608.patch"
+		"solid-start@^0.2.20": "patch:solid-start@npm%3A0.2.20#./.yarn/patches/solid-start-npm-0.2.20-1c62718646.patch"
 	},
 	"dependencies": {
 		"@thisbeyond/solid-dnd": "^0.7.4"
