--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -26,6 +26,7 @@
 		"@auth/core": "^0.5.0",
 		"@auth/solid-start": "^0.1.1",
 		"@motionone/solid": "^10.15.5",
+		"@radix-ui/colors": "^0.1.8",
 		"@solid-primitives/connectivity": "^0.3.7",
 		"@solid-primitives/page-visibility": "^2.0.4",
 		"@solid-primitives/storage": "^1.3.5",
