--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "../../tsconfig.base.json",
 	"include": ["./src", "scripts/auth.ts"],
+	"files": ["./reset.d.ts"],
 	"compilerOptions": {
 		"outDir": "dist",
 
