--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,10 +8,9 @@
 		"node": "18.x"
 	},
 	"scripts": {
-		"dev": "NODE_ENV=development tsx src/app.ts",
-		"auth": "NODE_ENV=production tsx scripts/auth.ts",
-		"build": "etsc",
-		"start": "NODE_ENV=production node dist/src/app.js"
+		"dev": "NODE_ENV=development vite-node --watch src/app.ts",
+		"auth": "NODE_ENV=production vite-node scripts/auth.ts",
+		"start": "NODE_ENV=production vite-node src/app.ts"
 	},
 	"dependencies": {
 		"dotenv": "^16.0.3",
@@ -26,9 +25,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^18.14.1",
-		"esbuild": "^0.17.10",
-		"esbuild-node-tsc": "^2.0.5",
-		"tsx": "^3.12.3",
-		"typescript": "^4.9.5"
+		"typescript": "^4.9.5",
+		"vite-node": "^0.29.3"
 	}
 }
