--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,36 +10,38 @@
 	"type": "module",
 	"devDependencies": {
 		"@iconify-json/bi": "^1.1.15",
-		"@iconify-json/ci": "^1.1.8",
+		"@iconify-json/ci": "^1.1.9",
 		"@iconify-json/radix-icons": "^1.1.10",
-		"autoprefixer": "^10.4.13",
-		"dotenv-cli": "^7.0.0",
+		"autoprefixer": "^10.4.14",
+		"dotenv-cli": "^7.1.0",
 		"postcss": "^8.4.21",
 		"solid-devtools": "^0.26.0",
 		"tailwindcss": "^3.2.7",
-		"typescript": "^4.9.5",
+		"typescript": "^5.0.2",
 		"unplugin-icons": "^0.15.3",
-		"vite": "^4.1.4",
-		"vite-plugin-pwa": "^0.14.4"
+		"vite": "^4.2.1",
+		"vite-plugin-pwa": "^0.14.5"
 	},
 	"dependencies": {
-		"@auth/core": "^0.5.0",
+		"@auth/core": "^0.5.1",
 		"@auth/solid-start": "^0.1.1",
 		"@motionone/solid": "^10.15.5",
 		"@radix-ui/colors": "^0.1.8",
-		"@solid-primitives/connectivity": "^0.3.7",
-		"@solid-primitives/page-visibility": "^2.0.4",
-		"@solid-primitives/storage": "^1.3.5",
+		"@solid-primitives/connectivity": "^0.3.10",
+		"@solid-primitives/page-visibility": "^2.0.7",
+		"@solid-primitives/storage": "^1.3.7",
 		"@solidjs/meta": "^0.28.2",
-		"@solidjs/router": "^0.7.0",
+		"@solidjs/router": "^0.8.1",
+		"dotenv": "^16.0.3",
 		"lib": "workspace:^",
 		"motion": "^10.15.5",
-		"solid-js": "^1.6.14",
+		"solid-js": "^1.6.15",
 		"solid-start": "^0.2.23",
 		"solid-start-node": "^0.2.23",
 		"solid-start-vercel": "^0.2.23",
-		"solid-transition-group": "^0.0.13",
-		"undici": "^5.20.0",
-		"zod": "^3.20.6"
+		"solid-transition-group": "^0.2.0",
+		"undici": "^5.21.0",
+		"workbox-window": "^6.5.4",
+		"zod": "^3.21.4"
 	}
 }
