--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
 		"source.organizeImports": true
 	},
 	"vitest.commandLine": "pnpm --filter lib test",
-	"vitest.showFailMessages": true
+	"vitest.showFailMessages": true,
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
