Fix type issues

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
 	"devDependencies": {
 		"@types/node": "^18.15.5",
 		"typescript": "^5.0.2",
+		"vite": "^4.2.1",
 		"vite-node": "^0.29.7"
 	}
 }
