--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -32,6 +32,7 @@
 		"@solid-primitives/storage": "^1.3.7",
 		"@solidjs/meta": "^0.28.2",
 		"@solidjs/router": "^0.8.1",
+		"@types/node": "^18.15.5",
 		"dotenv": "^16.0.3",
 		"lib": "workspace:^",
 		"motion": "^10.15.5",
