--- a/.npmrc
+++ b/.npmrc
@@ -6,7 +6,7 @@ auto-install-peers=false
 
 # Will default in v8
 # https://pnpm.io/next/npmrc#use-lockfile-v6
-use-lockfile-v6=true
+use-lockfile-v6=false
 
 
 # From 7.29.0, default in v8
