--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "../../tsconfig.base.json",
 	"include": ["./src"],
-	"files": ["./reset.d.ts"],
+	"files": ["./reset.d.ts", "./tailwind.config.ts"],
 	"compilerOptions": {
 		"outDir": "./node_modules/.cache/tsc",
 
