--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -32,6 +32,7 @@
 		"@solid-primitives/storage": "^1.3.8",
 		"@solidjs/meta": "^0.28.2",
 		"@solidjs/router": "^0.8.2",
+		"@thisbeyond/solid-dnd": "^0.7.4",
 		"@types/node": "^18.15.11",
 		"dotenv": "^16.0.3",
 		"lib": "workspace:^",
