--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "shopping-bird",
 	"private": true,
-	"packageManager": "pnpm@8.6.6",
+	"packageManager": "pnpm@8.6.7",
 	"engines": {
 		"node": "18.x"
 	},
@@ -19,16 +19,16 @@
 		"@total-typescript/ts-reset": "^0.4.2",
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
 		"@typescript-eslint/parser": "^5.57.1",
-		"eslint": "^8.37.0",
+		"eslint": "^8.44.0",
 		"prettier": "^2.8.7",
-		"rome": "^12.0.0",
-		"turbo": "^1.10.2",
-		"typescript": "^5.0.3"
+		"rome": "^12.1.3",
+		"turbo": "^1.10.7",
+		"typescript": "^5.1.6"
 	},
 	"pnpm": {
 		"patchedDependencies": {
-			"@motionone/solid@10.16.0": "patches/@motionone__solid@10.16.0.patch",
-			"@opentelemetry/resources@1.15.0": "patches/@opentelemetry__resources@1.15.0.patch"
+			"@opentelemetry/resources@1.15.0": "patches/@opentelemetry__resources@1.15.0.patch",
+			"@motionone/solid@10.16.2": "patches/@motionone__solid@10.16.2.patch"
 		}
 	}
 }
