--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,13 +1,14 @@
 {
 	"extends": "../../tsconfig.base.json",
-	"include": ["./src", "scripts/auth.ts"],
+	"include": ["./src"],
+
 	"files": ["./reset.d.ts"],
 	"compilerOptions": {
 		"outDir": "dist",
 
-		"types": ["node", "vite/client"]
-	},
-	"references": [
-		{ "path": "../lib" } //
-	]
+		"lib": ["ESNext"],
+		"moduleResolution": "node",
+		"types": ["@cloudflare/workers-types"],
+		"isolatedModules": true
+	}
 }
