Run bot on a schedule triggered by cron job

--- a/packages/server/wrangler.toml
+++ b/packages/server/wrangler.toml
@@ -7,6 +7,9 @@ browser = { binding = "BROWSER", type = "browser" }
 [durable_objects]
 bindings = [{ name = "DO", class_name = "TheShoppingBird" }]
 
+[triggers]
+crons = ["*/10 * * * *"] # Every 10 minutes
+
 [[migrations]]
 tag = "v1"
 new_classes = ["TheShoppingBird"]
