--- a/packages/server/wrangler.toml
+++ b/packages/server/wrangler.toml
@@ -9,7 +9,8 @@ browser = { binding = "BROWSER", type = "browser" }
 bindings = [{ name = "DO", class_name = "TheShoppingBird" }]
 
 [triggers]
-crons = ["*/3 * * * *"] # Every 3 minutes
+# Every 3 minutes between 04:00 and 21:00 UTC (i.e. 06:00 and 23:00 GMT+2 )
+crons = ["*/3 4-21 * * *"]
 
 [[migrations]]
 tag = "v1"
