--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,7 +12,7 @@
 		"wrangler": "^3.9.0"
 	},
 	"dependencies": {
-		"@cloudflare/puppeteer": "0.0.2-alpha",
+		"@cloudflare/puppeteer": "^0.0.5",
 		"@effect/data": "0.12.10",
 		"@effect/io": "0.27.2",
 		"hono": "^3.6.0",
