--- a/packages/server/wrangler.toml
+++ b/packages/server/wrangler.toml
@@ -1,6 +1,8 @@
 name = "shopping-bird"
 main = "src/worker.ts"
 compatibility_date = "2023-05-15"
+compatibility_flags = ["nodejs_compat"]
+
 
 logpush = true
 browser = { binding = "BROWSER", type = "browser" }
