--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,10 +13,9 @@
 	},
 	"dependencies": {
 		"@cloudflare/puppeteer": "^0.0.5",
-		"@effect/data": "0.12.10",
-		"@effect/io": "0.27.2",
 		"@microlabs/otel-cf-workers": "1.0.0-rc.14",
 		"@opentelemetry/api": "^1.6.0",
+		"effect": "2.0.0-next.36",
 		"hono": "^3.6.0",
 		"lib": "workspace:^",
 		"zod": "^3.21.4"
