WIP: bun-test with queue
Nothing good will probably come of this

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -8,7 +8,7 @@
 
 		"lib": ["ESNext"],
 		"moduleResolution": "node",
-		"types": ["@cloudflare/workers-types"],
+		"types": ["@cloudflare/workers-types", "bun-types"],
 		"isolatedModules": true
 	}
 }
