--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,6 +8,7 @@
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20230710.0",
+		"bun-types": "^1.0.3",
 		"typescript": "^5.1.6",
 		"wrangler": "^3.9.0"
 	},
