--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -15,6 +15,8 @@
 		"@cloudflare/puppeteer": "0.0.2-alpha",
 		"@effect/data": "0.12.10",
 		"@effect/io": "0.27.2",
+		"@effect/opentelemetry": "0.1.1",
+		"@opentelemetry/exporter-trace-otlp-http": "^0.41.0",
 		"hono": "^3.3.0",
 		"lib": "workspace:^",
 		"zod": "^3.21.4"
