--- a/packages/auth-script/package.json
+++ b/packages/auth-script/package.json
@@ -1,10 +1,9 @@
 {
 	"name": "auth-script",
 	"scripts": {
-		"auth": "vite-node auth.ts"
+		"auth": "bun auth.ts"
 	},
 	"dependencies": {
-		"dotenv": "^16.3.1",
 		"puppeteer": "^20.8.1",
 		"puppeteer-extra": "^3.3.6",
 		"puppeteer-extra-plugin-stealth": "^2.11.2",
@@ -12,7 +11,6 @@
 	},
 	"devDependencies": {
 		"@types/node": "^20.4.2",
-		"typescript": "^5.1.6",
-		"vite-node": "^0.33.0"
+		"typescript": "^5.1.6"
 	}
 }
