--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
 		"app": "pnpm --filter app",
 		"server": "pnpm --filter server",
 		"lib": "pnpm --filter lib",
-		"format": "rome format --write .",
+		"format": "biome format --write .",
 		"lint": "pnpm eslint -f unix .",
 		"tc": "pnpm tsc -b",
 		"check": "pnpm tc && pnpm lint",
 		"clean": "git clean -xfd node_modules packages -e packages/app/.env -e packages/server/.env && pnpm install"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^1.4.1",
 		"@total-typescript/ts-reset": "^0.4.2",
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
 		"@typescript-eslint/parser": "^5.57.1",
 		"eslint": "^8.44.0",
+		"eslint-plugin-biome": "^0.8.32",
 		"prettier": "^2.8.7",
-		"rome": "^12.1.3",
 		"turbo": "^1.10.7",
 		"typescript": "^5.1.6"
 	},
