--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,6 +8,7 @@
 		"module": "ESNext",
 		"target": "ESNext",
 		"moduleResolution": "bundler",
+		"verbatimModuleSyntax": true,
 
 		// Strictness
 		"strict": true,
