--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,7 +25,6 @@
 	"dependencies": {
 		"@auth/core": "^0.9.0",
 		"@auth/solid-start": "^0.1.1",
-		"@motionone/solid": "^10.16.2",
 		"@radix-ui/colors": "^1.0.0",
 		"@solid-primitives/connectivity": "^0.3.15",
 		"@solid-primitives/page-visibility": "^2.0.12",
@@ -37,6 +36,7 @@
 		"lib": "workspace:^",
 		"motion": "^10.16.2",
 		"solid-js": "^1.9.3",
+		"solid-motionone": "^1.0.2",
 		"solid-start": "^0.2.26",
 		"solid-start-node": "^0.2.26",
 		"solid-start-vercel": "^0.2.26",
